--- a/styles/style.css
+++ b/styles/style.css
@@ -1,44 +1,56 @@
 @import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat:wght@400;600&display=swap');
 
-:root {
+:root{
     --cor-primaria: #000000;
     --cor-secundaria: #F6F6F6;
-    --cor-terciaria: #22D4FD;
-    --cor-hover: #272727;
+    --cor-terciaria: #6b0785;
+    --cor-quarternaria: rgb(212, 153, 237);
 
-    --fonte-primaria: 'Krona One', sans-serif;
-    --fonte-secundaria: 'Montserrat', sans-serif;
+    --font-primaria:'Krona One', sans-serif;
+    --font-secundaria:  'Montserrat', sans-serif;
+
 }
+
 *{
     margin: 0;
     padding: 0;
 }
 
-body{
+body {
+    /* height: 100vh; */
     box-sizing: border-box;
-    background-color: var(--cor-primaria);
+    background-color:var(--cor-primaria);
     color: var(--cor-secundaria);
 }
+
 .cabecalho{
-    padding: 2% 0% 0% 15%;
+    padding: 3% 0% 0% 15%
 }
+
 .cabecalho__menu{
     display: flex;
     gap: 80px;
 }
 .cabecalho__menu__link{
-    font-family: var(--fonte-secundaria);
-    font-size: 1.5rem;
-    font-weight: 600;
+    font-family: var(--font-secundaria);
+    font-size: 24px;
+    font-weight: 600px;
     color: var(--cor-terciaria);
     text-decoration: none;
 }
+
+.cabecalho__menu__link:hover{
+    font-size: 26px;
+}
+
+
 .apresentacao{
     padding: 5% 15%;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
+
 .apresentacao__conteudo{
     width: 615px;
     display: flex;
@@ -47,53 +59,70 @@ body{
 }
 
 .apresentacao__conteudo__titulo{
-    font-size: 2.25rem;
-    font-family: var(--fonte-primaria);
+    font-size: 36px;
+    font-family: var(--font-primaria);
 }
-.titulo-destaque{
-    color: var(--cor-terciaria);
+
+.titulo-destaque {
+    color: var(--cor-quarternaria);
+
 }
+
 .apresentacao__conteudo__texto{
-    font-size: 1.5rem;
-    font-family: var(--fonte-secundaria);
+    font-size: 24px;
+    font-family: var(--font-secundaria);
 }
 
 .apresentacao__links{
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
     align-items: center;
     gap: 32px;
 }
+
 .apresentacao__links__subtitulo{
-    font-family: var(--fonte-primaria);
-    font-weight: 400;
-    font-size: 1.5rem;
+    font-family:var(--font-primaria);
+    font-weight: 400px;
+    font-size: 24px;
 }
 .apresentacao__links__link{
+    /* background-color: #6b0785; */
     display: flex;
     justify-content: center;
     gap: 16px;
     border: 2px solid var(--cor-terciaria);
     width: 378px;
-    text-align: center;
+    text-align: center; 
     border-radius: 8px;
-    font-size: 1.5rem;
-    font-weight: 600;
-    padding: 21.5px 0;
     text-decoration: none;
+    font-size: 24px;
+    font-weight: 600;
+    padding: 21.5px;
     color: var(--cor-secundaria);
-    font-family: var(--fonte-secundaria);
+    font-family: var(--font-secundaria);
 }
+
+.apresentacao__links__link__img{
+    width: 30px;
+}
+
 .apresentacao__links__link:hover{
-    background-color: var(--cor-hover);
-}
-.rodape{
-    color: var(--cor-primaria);
     background-color: var(--cor-terciaria);
-    padding: 24px;
-    text-align: center;
-    font-family: var(--fonte-secundaria);
-    font-size: 1.5rem;
-    font-weight: 400;
+    padding: 3%
 }
+
+.apresentacao__imagem{
+    width: 400px;
+    border-radius: 15%;
+    border: 1px solid var(--cor-secundaria);
+}
+
+.rodape{
+    padding: 24px;
+    color:var(--cor-secundaria);
+    background-color: var(--cor-terciaria);
+    text-align: center;
+    font-family: var(--font-secundaria);
+    font-size: 24px;
+    font-weight: 400px;
+    }
